gridlayout -> staggered grid layout manager reduced text data to display in frid items (inside the adapter)

--- a/app/src/main/res/layout/all_notes_fragment.xml
+++ b/app/src/main/res/layout/all_notes_fragment.xml
@@ -89,7 +89,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
                 android:layout_margin="32dp"
-                android:onClick="@{() -> allNotesViewModel.navigateToAddNote()}"
+                android:onClick="@{() -> allNotesViewModel.navigateToEditor()}"
                 android:src="@drawable/ic_baseline_add_24" />
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
