--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,11 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="random3">#B5F4FA</color>
+    <color name="random1">#B2B0E7</color>
+    <color name="random2">#8DABE5</color>
+
+
+
 </resources>
