--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,9 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardView"
-    android:layout_margin="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    
+    android:layout_margin="4dp"
     android:background="?android:attr/selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,13 +21,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
             android:ellipsize="end"
             android:fontFamily="@font/lato"
             android:maxLines="2"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/body_textview"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -44,10 +43,9 @@
             android:maxLines="4"
             android:textColor="@android:color/black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@+id/date_modified"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/title_textview"
             tools:text="Body" />
 
         <TextView
@@ -55,12 +53,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/lato"
             android:text="Last Modified - 1 July 2020"
             android:textSize="10sp"
             app:layout_constraintBottom_toTopOf="@+id/date_created"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/body_textview" />
 
         <TextView
             android:id="@+id/date_created"
